--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -17,7 +17,7 @@ jobs:
           USERNAME: ${{ github.repository_owner }}
       - name: Commit & Push
         run: |
-          git config user.name bbangiee
+          git config user.name 21dbwls12
           git config user.email yoojin1117@gmail.com
           git add -A .
           git commit -m "generated"
