--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Commit & Push
         run: |
           git config user.name 21dbwls12
-          git config user.email yoojin1117@gmail.com
+          git config user.email yoojin1117@github.com
           git add -A .
           git commit -m "generated"
           git push
